<resources>
  <string name="app_name">WesterraCU</string>
  <string name="splash_screen_text">Welcome</string>
  <string name="current_account_title">Spending accounts</string>
  <string name="credit_card_title">Credit cards</string>
  <string name="debit_card_title">Debit cards</string>
  <string name="investment_account_title">Investment accounts</string>
  <string name="loan_account_title">Loan accounts</string>
  <string name="savings_account_title">Savings accounts</string>
  <string name="term_deposit_title">Term deposits</string>
  <string name="general_account_title">General accounts</string>
  <string name="not_connected_title">No internet connection</string>
  <string name="try_again">TRY AGAIN</string>
  <string name="not_connected_subtitle">It seems you\'re not connected to a network</string>
  <string name="empty_string"> </string>
  <string name="log_in_button_title">LOG IN</string>
  <string name="forgot_credentials_text">FORGOT CREDENTIALS?</string>
  <string name="forgot_username_title">Forgot username</string>
  <string name="forgot_passcode_button_title">FORGOT PASSCODE?</string>
  <string name="forgot_username_option_text">Forgot Username?</string>
  <string name="forgot_password_option_text">Forgot Password?</string>
  <string name="forgot_username_subtitle">Please enter your email address to receive instructions.</string>
  <string name="email_placeholder">Email Address</string>
  <string name="confirm_email_address">CONFIRM EMAIL ADDRESS</string>
  <string name="instruction_sent_email_title">Instructions have been sent to your email.</string>
  <string name="check_email_steps_description">Check your email for steps to recover your username</string>
  <string name="done_button_title">DONE</string>
  <string name="submit_button_title">SUBMIT</string>
  <string name="confirm_button_title">CONFIRM</string>
  <string name="welcome_back">Welcome back</string>
  <string name="custom_login_link_message">Pay on the go with your Westerra card through Google™ or Samsung Pay® and enjoy the same protection and benefits. Learn more: <u>WesterraCU.com</u></string>
  <string name="enable_biometric_button_title">ENABLE ID</string>
  <string name="reset_button_title">RESET</string>
  <string name="close_title">Close</string>
  <string name="my_accounts_title">My accounts</string>
  <string name="account_details_title">Account details</string>
  <string name="balance_details_title">Balance Details</string>
  <string name="available_balance_title">Available Balance</string>
  <string name="current_balance_title">Current Balance</string>
  <string name="account_number_title">Account Number</string>
  <string name="account_type_title">Account Type</string>
  <string name="aba_routing_number_title">Routing Number</string>
  <string name="account_opening_date_title">Account Opening Date</string>
  <string name="account_owners_title">Account Owner(s)</string>
  <string name="last_updated_date_title">Last Updated Date</string>
  <string name="loan_details_title">Loan Details</string>
  <string name="general_title">General</string>
  <string name="available_credit_title">Available Credit</string>
  <string name="credit_limit_title">Credit Limit</string>
  <string name="interest_rate_title">Interest Rate</string>
  <string name="next_payment_amount_due_title">Next Payment Amount Due</string>
  <string name="next_payment_due_date_title">Next Payment Due Date</string>
  <string name="statement_closing_date_title">Statement Closing Date</string>
  <string name="payment_details_title">Payment Details</string>
  <string name="minimum_payment_amount_due_title">Minimum Payment Amount Due</string>
  <string name="interest_details_title">Interest Details</string>
  <string name="purchase_apr_title">Purchase APR</string>
  <string name="banking_details_title">Banking Details</string>
  <string name="other_title">Other</string>
  <string name="routing_number_title">Routing Number</string>
  <string name="please_try_again_button_text">RETRY</string>
  <string name="statements_loading_failed_message">Statements for joint accounts are not available.\n\nIf this is not a joint account, please try again or contact us for assistance.</string>
  <string name="upcoming_title">Upcoming</string>
  <string name="more_details_title">More Details</string>
  <string name="network_failure_title">Network Failure</string>
  <string name="network_failure_message">Oops! Something went wrong. Please try again.</string>
  <string name="oops_error_message">Oops! Something went wrong.</string>
  <string name="make_payment_title">Make Payment</string>
  <string name="more_details_message">Click the button for more information about this loan.</string>
  <string name="statements_title">Statements</string>
  <string name="details_title">Details</string>
  <string name="make_transfer_title">Make a transfer</string>
  <string name="continue_review_button_text">CONTINUE TO REVIEW</string>
  <string name="confirm_transfer_button_text">CONFIRM AND TRANSFER</string>
  <string name="confirm_schedule_button_text">CONFIRM AND SCHEDULE</string>
  <string name="transfer_executed_immediate_message">Your transfer will be executed immediately</string>
  <string name="warning_title">Warning</string>
  <string name="error_title">Error</string>
  <string name="choose_future_date_text">The start date cannot be today\'s date. Please choose a future date.</string>
  <string name="future_transfer_load_cc_not_allowed">Future transfer from a loan account or credit card is not allowed.</string>
  <string name="rates_fees_title">Rates &amp; Fees</string>
  <string name="cash_advance_rules_fees_apply">Standard cash advance rates and fees apply</string>
  <string name="when_title">When</string>
  <string name="transfer_done_title">Transfer Done</string>
  <string name="transfer_scheduled_title">Transfer Scheduled</string>
  <string name="transfer_rejected_title">Whoops!</string>
  <string name="transfer_completed_message">Your transfer has been completed.</string>
  <string name="transfer_scheduled_message">Your money transfer was successfully scheduled.</string>
  <string name="transfer_rejected_message">
    Your transfer couldn\'t be processed. Please try again in a minute or call member services at 303–321–4209.
    \n\n <b>Click the DONE button to return to the previous page.</b>
  </string>
  <string name="transfer_error_message_suffix">\n\n <b>Click the DONE button to return to the previous page.</b></string>
  <string name="continue_button_text">CONTINUE</string>
  <string name="done_button_text">DONE</string>
  <string name="go_back_text">GO BACK</string>
  <string name="note_title">Note</string>
  <string name="enter_note_placeholder_text">Enter note</string>
  <string name="done">Done</string>
  <string name="move_money_title">Move money</string>
  <string name="transfer_westerra_member_title">Transfer to Westerra member</string>
  <string name="transfer_activity_title">Transfer activity</string>
  <string name="bill_pay_title">Pay bills</string>
  <string name="payment_activity_title">Payment activity</string>
  <string name="external_transfer_pay_title">External transfers &amp; pay people</string>
  <string name="deposit_check_title">Deposit a check</string>
  <string name="deposit_check_subtitle">Deposit a check with your device\'s camera</string>
  <string name="check_submitted_title">Check submitted!</string>
  <string name="edit_check_details_title">Edit check details</string>
  <string name="unverified_check_title">Unverified check</string>
  <string name="to_account_title">To Account</string>
  <string name="verify_check_button_text">VERIFY CHECK</string>
  <string name="confirm_deposit_button_text">CONFIRM AND DEPOSIT</string>
  <string name="got_it_button_text">GOT IT</string>
  <string name="edit_check_details_button_text">EDIT CHECK DETAILS</string>
  <string name="confirm_as_is_button_text">CONFIRM AS IS</string>
  <string name="checks_multiple_payees_deposited_message">
    Checks payable to multiple payees cannot be deposited into a single owner’s account.
  </string>
  <string name="more_menu_title">More</string>
  <string name="manage_title">MANAGE</string>
  <string name="manage_notifications_title">Manage notifications</string>
  <string name="manage_contacts_title">Manage contacts</string>
  <string name="contacts_title">Contacts</string>
  <string name="contact_us_title">CONTACT US</string>
  <string name="messages_title">Messages</string>
  <string name="security_title">SECURITY</string>
  <string name="log_out_title">Log out</string>
  <string name="find_us">Find us</string>
  <string name="search_title">Search</string>
  <string name="my_profile_title">My profile</string>
  <string name="address_line_1">Address line 1</string>
  <string name="address_line_2">Address line 2 (optional)</string>
  <string name="city_or_town">City or town</string>
  <string name="state_title">State</string>
  <string name="postal_zip_code">Postal or ZIP code</string>
  <string name="home_title">Home</string>
  <string name="mailing_title">Mailing</string>
  <string name="save_changes">Save changes</string>
  <string name="change_address">Change address</string>
  <string name="add_address">Add address</string>
  <string name="add_an_address">Add an address</string>
  <string name="change_phone_number">Change phone number</string>
  <string name="add_phone_number">Add phone number</string>
  <string name="add_a_phone_number">Add a phone number</string>
  <string name="log_out_message">Are you sure you want to log out?</string>
  <string name="change_passcode_title">Change passcode</string>
  <string name="enable_biometrics">Enable biometrics</string>
  <string name="update_required_title">App Update Required</string>
  <string name="update_required_message">Please update your app to the latest version to enjoy the newest features and security enhancements.</string>
  <string name="update_now">Update Now</string>
  <string name="maybe_later">Maybe Later</string>
  <string name="switch_account_title">Switch account</string>
  <string name="notifications_title">Notifications</string>
  <string name="edit_accounts_title">Edit accounts</string>
  <string name="new_message_title">New message</string>
  <string name="inbox_tab_title">Inbox</string>
  <string name="sent_tab_title">Sent</string>
  <string name="drafts_tab_title">Drafts</string>
  <string name="open_account">Open Account</string>
  <string name="more_info">More info</string>
  <string name="success">Success!</string>
  <string name="account_created_message">Account created successfully, you should receive an email confirmation and your new account will appear in you accounts list shortly.</string>
  <string name="add_more_products">Add more products</string>
  <string name="fund_account">Fund Account</string>
  <string name="lets_fund_account">Let\'s fund your account!</string>
  <string name="fund_account_message_1">In order to activate your Westerra account, it will need to be funded.</string>
  <string name="fund_account_message_2">Please select one of your Westerra accounts on the following screen and enter the amount you would like to open your new account with.</string>
  <string name="no_minimum_balance_requirement">If the account is not funded within 25 days, it may be removed.</string>
  <string name="new_account_member_number_formatted">The new account will be created for member number %s.</string>
  <string name="continue_title">Continue</string>
  <string name="btp_not_finding">Not finding it? Contact us!</string>
  <string name="back">Back</string>
  <string name="intercept_ad_title">Reminder: Activate Your Card(s) Now</string>
  <string name="intercept_ad_message">We want to ensure members\' use of their Westerra debit and credit cards are not disrupted!\n\nIf you have recently received a new debit or credit card and have NOT activated it, please do so as soon as possible. To activate your card, call 1-866-762-0558.</string>
</resources>