<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/colorBackground"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/cta_button">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/ic_success_check" />

            <TextView
                android:id="@+id/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="?attr/spacerMedium"
                android:layout_marginStart="?attr/spacerMedium"
                android:layout_marginEnd="?attr/spacerMedium"
                app:layout_constraintTop_toBottomOf="@+id/image"
                android:text="@string/success"
                style="@style/Btp.TextView.Result.Title"/>

            <TextView
                android:id="@+id/message_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/title_text"
                android:layout_margin="?attr/spacerMedium"
                android:text="@string/account_created_message"
                style="@style/Btp.TextView.Result.Body"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/add_more_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintBottom_toTopOf="@+id/cta_button"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/add_more_products"
            android:background="@drawable/secondary_button_outline"
            android:foreground="?android:selectableItemBackground"
            android:layout_margin="@dimen/large">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/circular_xx_bold"
                android:text="@string/add_more_products"
                android:textColor="@color/textColorPrimary"
                android:textSize="16sp"/>

        </FrameLayout>

        <com.backbase.android.design.button.BackbaseButton
            android:id="@+id/cta_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/done"
            android:layout_margin="@dimen/large"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
