<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorOnBackground"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_collapsing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorOnBackground"
                app:contentScrim="@color/toolbarContentScrim"
                app:statusBarScrim="@color/transparent"
                app:titleEnabled="true"
                app:title="@string/fund_account"
                android:fitsSystemWindows="true"
                app:collapsedTitleGravity="start"
                app:collapsedTitleTextColor="@color/textColorPrimary"
                app:collapsedTitleTextAppearance="@style/CollapsedToolbarTitle"
                app:expandedTitleGravity="start|bottom"
                app:expandedTitleTextColor="@color/textColorPrimary"
                app:expandedTitleTextAppearance="@style/ExpandedToolbarTitle"
                app:expandedTitleMarginStart="@dimen/large"
                app:expandedTitleMarginEnd="@dimen/large"
                app:expandedTitleMarginBottom="@dimen/large"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <Space
                    android:id="@+id/expanded_size"
                    android:layout_width="1dp"
                    android:layout_height="@dimen/collapsing_space_height"
                    android:background="@color/transparent"/>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    style="@style/CollapsingToolbar">

                    <FrameLayout
                        android:id="@+id/back_button"
                        android:layout_width="?attr/actionBarSize"
                        android:layout_height="?attr/actionBarSize"
                        app:layout_constraintStart_toStartOf="parent"
                        android:focusable="true"
                        android:clickable="true"
                        android:background="?android:selectableItemBackground">

                        <ImageView
                            android:layout_width="@dimen/toolbar_image_size"
                            android:layout_height="@dimen/toolbar_image_size"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_back_arrow"
                            android:contentDescription="@string/back"/>

                    </FrameLayout>

                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:fillViewport="true"
            android:scrollbars="none"
            android:overScrollMode="always"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_layout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginHorizontal="@dimen/large"
                    android:layout_marginTop="@dimen/large"
                    android:layout_marginBottom="@dimen/large"
                    card_view:cardCornerRadius="@dimen/medium"
                    card_view:cardElevation="@dimen/small">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/large">

                        <TextView
                            android:id="@+id/account_agreement_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toTopOf="parent"
                            android:paddingBottom="@dimen/large"
                            android:text="@string/lets_fund_account"
                            style="@style/Btp.TextView.Requirements.Title"/>

                        <TextView
                            android:id="@+id/message_1_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@+id/account_agreement_text"
                            android:paddingBottom="@dimen/large"
                            android:text="@string/fund_account_message_1"
                            style="@style/Btp.TextView.Requirements.Body"/>

                        <TextView
                            android:id="@+id/message_2_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@+id/message_1_text"
                            android:paddingBottom="@dimen/large"
                            android:text="@string/fund_account_message_2"
                            style="@style/Btp.TextView.Requirements.Body"/>

                        <TextView
                            android:id="@+id/member_number_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@+id/message_2_text"
                            android:paddingBottom="@dimen/large"
                            tools:text="@string/new_account_member_number_formatted"
                            style="@style/Btp.TextView.Requirements.Body"/>

                        <TextView
                            android:id="@+id/minimum_balance_requirement_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@+id/member_number_text"
                            android:text="@string/no_minimum_balance_requirement"
                            style="@style/Btp.TextView.Requirements.Body"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <com.backbase.android.design.button.BackbaseButton
            android:id="@+id/cta_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/continue_title"
            android:layout_margin="@dimen/large"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
