<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contents_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginVertical="@dimen/large"
            android:layout_marginHorizontal="@dimen/large"
            android:paddingBottom="@dimen/large"
            android:background="@drawable/alert_background_intercept_ad">

            <ImageView
                android:id="@+id/logo_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginHorizontal="55dp"
                android:translationY="@dimen/intercept_ad_image_offset"
                android:src="@drawable/westerra_cu_logo"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/bottom_contents_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/logo_image"
                android:layout_marginTop="@dimen/intercept_ad_below_image_offset">

                <TextView
                    android:id="@+id/intercept_ad_title_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    android:paddingHorizontal="@dimen/large"
                    android:paddingBottom="@dimen/large"
                    android:text="@string/intercept_ad_title"
                    style="@style/InterceptAd.TextView.Title"/>

                <TextView
                    android:id="@+id/intercept_ad_message_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/intercept_ad_title_text"
                    android:paddingHorizontal="@dimen/large"
                    android:paddingBottom="@dimen/large"
                    android:text="@string/intercept_ad_message"
                    style="@style/InterceptAd.TextView.Message"/>

                <com.backbase.android.design.button.BackbaseButton
                    android:id="@+id/cta_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/intercept_ad_message_text"
                    android:layout_marginHorizontal="@dimen/large"
                    android:text="@string/continue_title"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/close_clicker"
            android:layout_width="34dp"
            android:layout_height="34dp"
            app:layout_constraintTop_toTopOf="@id/contents_container"
            app:layout_constraintBottom_toTopOf="@id/contents_container"
            app:layout_constraintStart_toEndOf="@id/contents_container"
            app:layout_constraintEnd_toEndOf="@id/contents_container"
            android:background="?android:selectableItemBackground"
            android:translationX="-6dp"
            android:translationY="6dp"
            android:elevation="10dp"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/ic_close_circle"
                android:contentDescription="@string/close_title"/>

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
