<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_contents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            tools:visibility="visible"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingTop="@dimen/medium">

            <androidx.cardview.widget.CardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginHorizontal="@dimen/large"
                card_view:cardCornerRadius="@dimen/medium"
                card_view:cardElevation="@dimen/small">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/card_contents"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white">

                    <WebView
                        android:id="@+id/web_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:layout_height="240dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/cta_button"/>

                    <FrameLayout
                        android:id="@+id/more_info_container"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/cta_button"
                        android:background="@color/moreInfoButtonBackground">

                        <Button
                            android:id="@+id/more_info_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/cta_button"
                            android:paddingVertical="0dp"
                            android:text="@string/more_info"
                            style="@style/Btp.Button.MoreInfo"/>

                    </FrameLayout>

                    <Button
                        android:id="@+id/cta_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/more_info_container"
                        android:paddingVertical="0dp"
                        android:text="@string/open_account"
                        style="@style/Btp.Button.AccountCta"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <Space
                android:id="@+id/space_card_bottom"
                android:layout_width="match_parent"
                android:layout_height="@dimen/medium"
                app:layout_constraintTop_toBottomOf="@id/card"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginHorizontal="@dimen/large"
            android:paddingVertical="@dimen/small"
            android:visibility="invisible"
            tools:visibility="visible">

            <TextView
                android:id="@+id/header_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:text="Header"
                style="@style/Btp.TextView.ListHeader"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/footer_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginHorizontal="@dimen/large"
            android:paddingVertical="@dimen/large"
            android:visibility="invisible"
            tools:visibility="visible">

            <com.westerra.release.btp.components.CallMessageTextView
                android:id="@+id/footer_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/btp_not_finding"
                style="@style/Btp.TextView.Footer"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>